--- a/DcConfigTool/DcConfigTool/DcConfigTool.csproj
+++ b/DcConfigTool/DcConfigTool/DcConfigTool.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseProces.cs" />
+    <Compile Include="BaseProcess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
